dependencies, README.md

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,9 +22,12 @@ packages = find:
 python_requires = >=3.6,<4
 install_requires =
     pygit2
+    requests
 
 [options.extras_require]
-testing = pygit2
+testing =
+    pygit2
+    requests
 
 [options.entry_points]
 console_scripts =
