--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pygit2
+        pip install flake8 pygit2 requests
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names.
