--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -26,10 +26,8 @@ jobs:
         pip install flake8 pygit2 requests
     - name: Lint with flake8
       run: |
-        # stop the build if there are Python syntax errors or undefined names.
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings.
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=79 --statistics
+        flake8 src --max-complexity=10 --max-line-length=79 \
+          --count --show-source --statistics
     - name: Run unittest
       run: |
-        python -m unittest discover -s src -v
+        python -m unittest discover -s src/tests -v
