--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Lint and test
       run: |
         flake8 src/ghit --count --show-source --statistics
-        python -m unittest discover -s src/tests -v
+        python -m unittest discover -s src -v
     - name: Build package
       run: python -m build
     - name: Publish distribution 📦 to PyPI
