--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -26,7 +26,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install build
+        pip install build flake8 pygit2 requests
+    - name: Lint and test
+      run: |
+        flake8 src/ghit --count --show-source --statistics
+        python -m unittest discover -s src -v
     - name: Build package
       run: python -m build
     - name: Publish distribution 📦 to PyPI
