--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,14 +23,13 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 ruff pygit2 requests
-    - name: Check with flake8
-      run: |
-        flake8 src --max-complexity=10 --max-line-length=120 \
-          --count --show-source --statistics
+        pip install ruff pygit2 requests vermin
     - name: Check with ruff
       run: |
         ruff check src
+    - name: Check vermin
+      run: |
+        vermin -vvvv --eval-annotations -t=3.9 --no-tips --no-parse-comments src
     - name: Run unittest
       run: |
         python -m unittest discover -s src -v
