--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install ruff pygit2 requests vermin
+        pip install ruff pygit2 requests vermin pytest
     - name: Check with ruff
       run: |
         ruff check src
@@ -32,4 +32,4 @@ jobs:
         vermin -vvvv --eval-annotations -t=3.9 --no-tips --no-parse-comments src
     - name: Run unittest
       run: |
-        python -m unittest discover -s src -v
+        pytest
