--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -31,13 +31,13 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install build ruff pygit2 requests
+        pip install build ruff pygit2 requests pytest
     - name: Check with ruff
       run: |
         ruff check src
     - name: Unit tests
       run: |
-        python -m unittest discover -s src -v
+        pytest
     - name: Build package
       run: python -m build
 
