--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,14 @@
 [project]
 name = 'ghit-smartptr'
-version = '0.0.9'
 readme = 'README.md'
 requires-python = '>=3.9,<4.0'
+dynamic = ["version"]
+
+[tool.setuptools.dynamic]
+version = {attr = "ghit.__version__"}
 
 [build-system]
-requires = ['setuptools>=43.0.0', 'wheel']
+requires = ['setuptools>=61.0.0', 'wheel']
 build-backend = 'setuptools.build_meta'
 
 [tool.ruff]
