--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,18 +31,14 @@ requires = ['hatchling']
 build-backend = 'hatchling.build'
 
 [tool.ruff]
-select = ['E', 'F', 'W', 'I', 'YTT', 'FA', 'ISC', 'ICN', 'G', 'C90', 'N', 'UP', 'S', 'B', 'C4', 'DTZ', 'DJ', 'PIE', 'T20', 'PT', 'Q', 'RSE', 'RET', 'SIM', 'TID', 'TCH', 'INT', 'PTH', 'PL']
 line-length = 120
 target-version = 'py39'
 
-[tool.ruff.per-file-ignores]
-'*/tests/*' = ['S101']
-
-[tool.ruff.pylint]
-max-args = 8
-
-[tool.ruff.flake8-quotes]
-inline-quotes = 'single'
+[tool.ruff.lint]
+select = ['E', 'F', 'W', 'I', 'YTT', 'FA', 'ISC', 'ICN', 'G', 'C90', 'N', 'UP', 'S', 'B', 'C4', 'DTZ', 'DJ', 'PIE', 'T20', 'PT', 'Q', 'RSE', 'RET', 'SIM', 'TID', 'TCH', 'INT', 'PTH', 'PL']
+flake8-quotes.inline-quotes = 'single'
+per-file-ignores.'*/tests/*' = ['S101']
+pylint.max-args = 8
 
 [tool.black]
 line-length = 120
