--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -16,20 +16,21 @@ jobs:
 
     steps:
     - uses: actions/checkout@v6
-    - name: Set up Python 3.9
+    - name: Set up Python 3.12
       uses: actions/setup-python@v6
       with:
-        python-version: "3.11"
+        python-version: "3.12"
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install ruff pygit2 requests vermin pytest
+        pip install -r requirements.txt
+        pip install ruff vermin pytest
     - name: Check with ruff
       run: |
         ruff check src
     - name: Check vermin
       run: |
-        vermin -vvvv --eval-annotations -t=3.11 --no-tips --no-parse-comments src
+        vermin -vvvv --eval-annotations -t=3.12 --no-tips --no-parse-comments src
     - name: Run unittest
       run: |
         pytest
