--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -27,11 +27,12 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v6
       with:
-        python-version: '3.11'
+        python-version: '3.12'
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install build ruff pygit2 requests pytest
+        pip install -r requirements.txt
+        pip install build ruff pytest
     - name: Check with ruff
       run: |
         ruff check src
